[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/BG.png" type="Texture" id=1]
[ext_resource path="res://assets/board.png" type="Texture" id=2]
[ext_resource path="res://cell.tscn" type="PackedScene" id=3]
[ext_resource path="res://AI.gd" type="Script" id=4]
[ext_resource path="res://grid.gd" type="Script" id=5]
[ext_resource path="res://EndModal.tscn" type="PackedScene" id=6]

[node name="Grid" type="Node2D"]
script = ExtResource( 5 )

[node name="background" type="Sprite" parent="."]
rotation = 0.000622398
texture = ExtResource( 1 )
centered = false

[node name="board" type="Sprite" parent="."]
position = Vector2( 512, 368 )
texture = ExtResource( 2 )

[node name="player_cell0" parent="." groups=[
"Cells",
] instance=ExtResource( 3 )]
position = Vector2( 314, 168 )

[node name="player_cell1" parent="." groups=[
"Cells",
] instance=ExtResource( 3 )]
position = Vector2( 514, 168 )
board_action = [ 0, 1 ]

[node name="player_cell2" parent="." groups=[
"Cells",
] instance=ExtResource( 3 )]
position = Vector2( 706, 168 )
board_action = [ 0, 2 ]

[node name="player_cell3" parent="." groups=[
"Cells",
] instance=ExtResource( 3 )]
position = Vector2( 320, 368 )
board_action = [ 1, 0 ]

[node name="player_cell4" parent="." groups=[
"Cells",
] instance=ExtResource( 3 )]
position = Vector2( 512, 368 )
board_action = [ 1, 1 ]

[node name="player_cell5" parent="." groups=[
"Cells",
] instance=ExtResource( 3 )]
position = Vector2( 704, 368 )
board_action = [ 1, 2 ]

[node name="player_cell6" parent="." groups=[
"Cells",
] instance=ExtResource( 3 )]
position = Vector2( 304, 576 )
board_action = [ 2, 0 ]

[node name="player_cell7" parent="." groups=[
"Cells",
] instance=ExtResource( 3 )]
position = Vector2( 512, 576 )
board_action = [ 2, 1 ]

[node name="player_cell8" parent="." groups=[
"Cells",
] instance=ExtResource( 3 )]
position = Vector2( 720, 576 )
board_action = [ 2, 2 ]

[node name="AI" type="Node" parent="."]
script = ExtResource( 4 )

[node name="modal" parent="." instance=ExtResource( 6 )]
visible = false
margin_left = 80.0
margin_top = 240.0
margin_right = 944.0
margin_bottom = 456.0
